--- a/code/LSTM-GRU-intra.ipynb
+++ b/code/LSTM-GRU-intra.ipynb
@@ -70,7 +70,7 @@
       "cell_type": "code",
       "source": [
         "y_data = data.pop('4')\n",
-        "x_data = data\n"
+        "x_data = data"
       ],
       "metadata": {
         "id": "2ba-jn5i-Jew"
@@ -81,7 +81,7 @@
     {
       "cell_type": "code",
       "source": [
-        "train_x,test_x,train_y,test_y = train_test_split(x_data,y_data,test_size=0.2,random_state=0,shuffle=True)"
+        "train_x,test_x,train_y,test_y = train_test_split(x_data, y_data, test_size=0.2, random_state=0, shuffle=True)"
       ],
       "metadata": {
         "id": "hUFJSWtz-Me8"
@@ -133,11 +133,10 @@
       "cell_type": "code",
       "source": [
         "model = Sequential()\n",
-        "model.add(LSTM(100,input_shape=(len(x_data.columns),1), activation='tanh', recurrent_activation='sigmoid', return_sequences=True))\n",
-        "model.add(Dense(100,activation='ReLU'))\n",
-        "model.add(GRU(100, input_shape=(100,1), activation='tanh', recurrent_activation='sigmoid')) \\\n",
-        "\n",
-        "model.add(Dense(4,activation='softmax'))\n",
+        "model.add(LSTM(100, input_shape=(len(x_data.columns), 1), activation='tanh', recurrent_activation='sigmoid', return_sequences=True))\n",
+        "model.add(Dense(100, activation='ReLU'))\n",
+        "model.add(GRU(100, input_shape=(100, 1), activation='tanh', recurrent_activation='sigmoid')) \n",
+        "model.add(Dense(4, activation='softmax'))\n",
         "model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
         "model.summary()"
       ],
@@ -178,7 +177,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model.fit(train_x,train_y,epochs=6,batch_size=32)"
+        "model.fit(train_x, train_y, epochs=6, batch_size=32)"
       ],
       "metadata": {
         "id": "qTEcMBfO_uso",
